--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -1,4 +1,3 @@
----
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -17,7 +16,7 @@ spec:
     spec:
       containers:
       - name: echo-server
-        image: quay.io/sololabs/echo-server:v1
+        image: quay.io/sololabs/echo-server
         imagePullPolicy: IfNotPresent
         ports:
         - containerPort: 8080
@@ -28,18 +27,3 @@ spec:
           limits:
             memory: "128Mi"
             cpu: "500m"
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: echo-server
-  labels:
-    app: echo-server
-spec:
-  ports:
-  - port: 8080
-    targetPort: 8080
-    protocol: TCP
-    name: http
-  selector:
-    app: echo-server
