--- a/echo-server.yaml
+++ b/echo-server.yaml
@@ -1,4 +1,3 @@
----
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -17,17 +16,30 @@ spec:
     spec:
       containers:
       - name: echo-server
-        image: quay.io/sololabs/echo-server:v1
+        image: quay.io/sololabs/echo-server:latest
         imagePullPolicy: IfNotPresent
         ports:
         - containerPort: 8080
+          name: http
         resources:
           requests:
-            memory: "64Mi"
-            cpu: "250m"
+            memory: "16Mi"
+            cpu: "100m"
           limits:
-            memory: "128Mi"
-            cpu: "500m"
+            memory: "32Mi"
+            cpu: "250m"
+        livenessProbe:
+          httpGet:
+            path: /healthz
+            port: http
+            scheme: HTTP
+          initialDelaySeconds: 10
+        readinessProbe:
+          httpGet:
+            path: /healthz
+            port: http
+            scheme: HTTP
+          initialDelaySeconds: 5
 ---
 apiVersion: v1
 kind: Service
@@ -38,7 +50,7 @@ metadata:
 spec:
   ports:
   - port: 8080
-    targetPort: 8080
+    targetPort: "http"
     protocol: TCP
     name: http
   selector:
