--- a/k8s/service.yaml
+++ b/k8s/service.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   ports:
   - port: 8080
-    targetPort: 8080
+    targetPort: "http"
     protocol: TCP
     name: http
   selector:
