Moved to quay.io/solo-io

--- a/echo-server-latest.yaml
+++ b/echo-server-latest.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
       - name: echo-server
-        image: quay.io/sololabs/echo-server:latest
+        image: quay.io/solo-io/echo-server:latest
         imagePullPolicy: IfNotPresent
         ports:
         - containerPort: 8080
